Optimized primitive to Object